frame/support/test/tests/benchmark_ui/invalid_origin.stderr
error[E0277]: the trait bound `<T as frame_support_test::Config>::RuntimeOrigin: From<{integer}>` is not satisfied
 --> tests/benchmark_ui/invalid_origin.rs:6:1
  |
6 | #[benchmarks]
  | ^^^^^^^^^^^^^ the trait `From<{integer}>` is not implemented for `<T as frame_support_test::Config>::RuntimeOrigin`
  |
  = note: required for `{integer}` to implement `Into<<T as frame_support_test::Config>::RuntimeOrigin>`
  = note: this error originates in the attribute macro `benchmarks` (in Nightly builds, run with -Z macro-backtrace for more info)
